fixed video size on small phone screens

--- a/css/electronics.css
+++ b/css/electronics.css
@@ -2,3 +2,15 @@
     width: 80%;
     height: auto; /* Maintain aspect ratio */
   }
+
+  body {
+    background: #0c0c0c;
+    /* background: pink; */
+    min-height: 100vh;
+  }
+
+  @media screen and (max-width: 420px) {
+    #videoPlayer {
+      width: 78%;
+    }
+  }
